objects/Forward_Contracts__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forward Contracts</relationshipLabel>
        <relationshipName>Forward_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_USD__c</fullName>
        <formula>Market_Rate__r.Ratio_to_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Amount__c</fullName>
        <formula>FX_Balance__c  /   Base_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Currency__c</fullName>
        <label>Custom Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FX_Amount__c</fullName>
        <label>FX Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Balance__c</fullName>
        <label>FX Balance</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Currency__c</fullName>
        <label>FX Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Rate</label>
        <referenceTo>Market_Rate__c</referenceTo>
        <relationshipLabel>Forward Contracts</relationshipLabel>
        <relationshipName>Forward_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Agreed conversion rate of FC</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Amount__c</fullName>
        <label>Settlement Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Balance__c</fullName>
        <label>Settlement Balance</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Currency__c</fullName>
        <label>Settlement Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Forward Contracts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Converted_Amount__c</columns>
        <columns>Market_Rate__c</columns>
        <columns>Base_USD__c</columns>
        <columns>FX_Amount__c</columns>
        <columns>Settlement_Amount__c</columns>
        <columns>FX_Currency__c</columns>
        <columns>Settlement_Currency__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>FX_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Global Datawarehouse</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Forward Contracts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forward Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>